<resources>
    <string name="app_name">Abdullaev-Umar-Final</string>
    <string name="shp">4.5</string>
    <string name="Jollof_Rice">Jollof Rice</string>
    <string name="Suhai">Suhani’s Stop, Kukatpally</string>
    <string name="Description">Description</string>
    <string name="ST">ST</string>
    <string name="star">srar</string>
    <string name="Home">Home</string>
    <string name="Buttom_5">Bu</string>
    <string name="NML">NML</string>
    <string name="spr">21-42-34, Banjara Hills, Hyder....</string>
    <string name="mnl">Search food nearby</string>
    <string name="ref">Your reference</string>



    <string name="long_text">Our fried rice is made from the finest ingredients and veggies. single dish is made with fresh vegetables, rescued.</string>
    <string name="rescueddd">rescued</string>
    <string name="vegannn">Vegan</string>
    <string name="minnn">min</string>
    <string name="nutritional_values_a">Nutritional Values</string>
    <string name="protein_p">Protein</string>
    <string name="carbonidrates_r">carbonidrates</string>
    <string name="sodium_m">Sodium</string>
    <string name="pattasium_m">Pattasium</string>
    <string name="rich_in_vitamin_a_c_and_b3_m1">Rich in Vitamin A, C and B3</string>
    <string name="ingredients_s">Ingredients</string>
    <string name="selected_user_user_1_1">Selected User User 1</string>
    <string name="edditions_2">Edditions</string>
    <string name="jalapeno_1">Jalapeno</string>
    <string name="edit_1">Edit</string>
    <string name="user_4_1">User 4</string>
    <string name="name_1">Name:</string>
    <string name="user1_1">User1</string>
    <string name="favorite_curations_1">favorite curations:</string>
    <string name="favorite_dishes_1">Favorite Dishes</string>
    <string name="recent_order_2">Recent Order</string>


</resources>